<resources>
    <string name="app_name">Fixtopia092</string>
    <string name="fixtopia">Fixtopia</string>
    <string name="fixtopia2">لصيانة الجوال</string>
    <string name="fixtopia3">خدمة جديدة لصيانة الجوال وبجودة عالية</string>
    <string name="fixtopia4">ضمان للصيانة تمتد لستة شهور</string>
    <string name="fixtopia5">طلب صيانة جديد</string>
    <string name="fixtopia6">متابعة صيانة سابقة</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_geolocate">Pick Place</string>

    <string-array name="vvv">
        <item>ايفون 7</item>
        <item>ايفون 8</item>
        <item>ايفون اكس</item>

    </string-array>
</resources>
